--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,23 @@ html {
 }
 
 body {
-    background-color: hsl(0, 0%, 57%);
+    background-color: hsl(0, 0%, 87%);
 }
 
 .container {
     max-width: 1000px;
-    margin: 0 auto;
+    margin: 40px auto 20px auto;
+    
+}
+
+.header__title {
+    text-shadow: 1px 1px 100px black;
+    font-weight: 900;
+} 
+
+.main {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat (2, 1fr);
+    grid-row-gap: 10px;
 }
