--- a/css/showTasks.css
+++ b/css/showTasks.css
@@ -1,6 +1,6 @@
 .showTasks {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: repeat(3, 1fr);
     background-color: white;
 }
