--- a/css/addNewTask.css
+++ b/css/addNewTask.css
@@ -10,10 +10,10 @@
 }
 
 .addNewTask__line {
-    align-items: center;
+    align-self: center;
 }
 
-.addNewTask__bottom {
+.addNewTask__input {
     display: flex;
     margin: 0 20px 10px 20px;
     align-items: center;
@@ -24,7 +24,7 @@
     flex-grow: 1;
 }
 
-.addNewTask__input {
+.addNewTask__write {
     width: 99%;
     height: 35px;
 }
