Windows are ready !

--- a/css/showTasks.css
+++ b/css/showTasks.css
@@ -10,8 +10,6 @@
     margin: 0 0 0 20px;
 }
 
-.showTasks__line {}
-
 .showTasks__output {
     display: flex;
     flex-wrap: wrap;
@@ -24,9 +22,15 @@
     align-items: center;
     justify-content: center;
     margin: 10px;
+    margin-left: 20px;
     flex: 0 0 30px;
     height: 30px;
-    background-color: green;  
+    background-color: hsl(120, 100%, 25%);
+    border: none;
+}
+
+.showTasks__done:hover {
+    background-color: hsl(120, 100%, 35%);
 }
 
 .showTasks__read {
@@ -41,12 +45,17 @@
     flex: 0 0 30px;
     height: 30px;
     margin: 10px;
+    margin-right: 20px;
     background-color: red;
     flex-grow: 0;
+}
+
+.showTasks__remove:hover {
+    background-color: hsl(0, 100%, 70%);
 }
 
 .test {
     flex-grow: 1;
     width: 100%;
-    margin: 0 10px 10px 10px;
+    margin: 0 20px 10px 20px;
 }
