--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-    background-color: hsl(0, 0%, 87%);
+    background-color: hsl(0, 0%, 90%);
 }
 
 .container {
@@ -18,6 +18,7 @@ body {
 .header__title {
     text-shadow: 1px 1px 100px black;
     font-weight: 900;
+    margin-left: 10px;
 } 
 
 .main {
