--- a/css/showTasks.css
+++ b/css/showTasks.css
@@ -33,6 +33,10 @@
     border: none;
 }
 
+.showTasks__itemColor {
+    color: white;
+}
+
 .showTasks__done:hover {
     background-color: hsl(120, 100%, 35%);
 }
