--- a/css/addNewTask.css
+++ b/css/addNewTask.css
@@ -17,6 +17,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 10px;
 }
 
 @media (max-width: 414px) {
