--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body {
     text-shadow: 1px 1px 100px black;
     font-weight: 900;
     margin-left: 10px;
+    white-space: nowrap;
 } 
 
 .main {
