changed class name for line-through and added thickness

--- a/css/showTasks.css
+++ b/css/showTasks.css
@@ -51,8 +51,9 @@
     flex-basis: 0;
 }
 
-.showTasks__outputLine {
+.showTasks__doneLine {
     text-decoration: line-through;
+    text-decoration-thickness: 2px;
 }
 
 .showTasks__remove {
